--- a/data/gtk/window.ui
+++ b/data/gtk/window.ui
@@ -157,7 +157,7 @@
         <attribute name="use-markup">True</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_Create new station &lt;sup&gt;↗&lt;/sup&gt;</attribute>
+        <attribute name="label" translatable="yes">_Create new station</attribute>
         <attribute name="action">win.create-new-station</attribute>
         <attribute name="use-markup">True</attribute>
       </item>
@@ -185,7 +185,7 @@
         <attribute name="use-markup">True</attribute>
       </item>
       <item>
-        <attribute name="label" translatable="yes">_Create new station &lt;sup&gt;↗&lt;/sup&gt;</attribute>
+        <attribute name="label" translatable="yes">_Create new station</attribute>
         <attribute name="action">win.create-new-station</attribute>
         <attribute name="use-markup">True</attribute>
       </item>
