--- a/data/gtk/create_station_dialog.ui
+++ b/data/gtk/create_station_dialog.ui
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <template class="SwNewStationDialog" parent="AdwWindow">
+  <template class="SwCreateStationDialog" parent="AdwWindow">
     <property name="width_request">325</property>
     <property name="height_request">500</property>
     <property name="default_width">500</property>
