--- a/data/gtk/create_station_dialog.ui
+++ b/data/gtk/create_station_dialog.ui
@@ -204,6 +204,7 @@
                                 <property name="label" translatable="yes">Create station</property>
                                 <property name="halign">center</property>
                                 <property name="margin_top">12</property>
+                                <property name="sensitive">False</property>
                                 <style>
                                   <class name="pill"/>
                                   <class name="suggested-action"/>
