--- a/data/gtk/song_row.ui
+++ b/data/gtk/song_row.ui
@@ -3,6 +3,7 @@
   <template class="SwSongRow" parent="AdwActionRow">
     <property name="activatable_widget">save_button</property>
     <property name="title_lines">3</property>
+    <property name="title_selectable">True</property>
     <child>
       <object class="GtkStack" id="button_stack">
         <property name="valign">center</property>
