--- a/data/gtk/create_station_dialog.ui
+++ b/data/gtk/create_station_dialog.ui
@@ -30,7 +30,7 @@
                   <object class="AdwStatusPage">
                     <property name="icon-name">list-add-symbolic</property>
                     <property name="title" translatable="yes">Create new station</property>
-                    <property name="description" translatable="yes">You can decide if you want the new station to be visible for all users worldwide or if you want to create a local private station.</property>
+                    <property name="description" translatable="yes">You can decide if you want the new station to be visible for all users worldwide or if you want to create a local station.</property>
                     <property name="height-request">400</property>
                     <property name="child">
                       <object class="GtkBox">
@@ -42,6 +42,7 @@
                           <object class="GtkButton" id="create_online_button">
                             <property name="label" translatable="yes">Create _public station</property>
                             <property name="use_underline">True</property>
+                            <signal name="clicked" handler="create_public_station" swapped="true"/>
                             <style>
                               <class name="pill"/>
                               <class name="suggested-action"/>
@@ -50,8 +51,9 @@
                         </child>
                         <child>
                           <object class="GtkButton" id="create_local_button">
-                            <property name="label" translatable="yes">Create _local private station</property>
+                            <property name="label" translatable="yes">Create _local station</property>
                             <property name="use_underline">True</property>
+                            <signal name="clicked" handler="create_local_station" swapped="true"/>
                             <style>
                               <class name="pill"/>
                             </style>
@@ -120,7 +122,7 @@
                                     <property name="overflow">hidden</property>
                                     <style>
                                       <class name="favicon-big"/>
-                                      <class name="dim-label"/>
+                                      <class name="card"/>
                                     </style>
                                   </object>
                                 </child>
@@ -137,6 +139,7 @@
                                     <child>
                                       <object class="GtkEntry" id="name_entry">
                                         <property name="valign">center</property>
+                                        <signal name="notify::text" handler="validate_input" swapped="true"/>
                                       </object>
                                     </child>
                                   </object>
@@ -150,49 +153,7 @@
                                     <child>
                                       <object class="GtkEntry" id="url_entry">
                                         <property name="valign">center</property>
-                                      </object>
-                                    </child>
-                                  </object>
-                                </child>
-                              </object>
-                            </child>
-                            <child>
-                              <object class="AdwPreferencesGroup">
-                                <child>
-                                  <object class="AdwActionRow">
-                                    <property name="activatable">True</property>
-                                    <property name="use_underline">True</property>
-                                    <property name="title" translatable="yes">Country</property>
-                                    <property name="activatable-widget">country_entry</property>
-                                    <child>
-                                      <object class="GtkEntry" id="country_entry">
-                                        <property name="valign">center</property>
-                                      </object>
-                                    </child>
-                                  </object>
-                                </child>
-                                <child>
-                                  <object class="AdwActionRow">
-                                    <property name="activatable">True</property>
-                                    <property name="use_underline">True</property>
-                                    <property name="title" translatable="yes">State</property>
-                                    <property name="activatable-widget">state_entry</property>
-                                    <child>
-                                      <object class="GtkEntry" id="state_entry">
-                                        <property name="valign">center</property>
-                                      </object>
-                                    </child>
-                                  </object>
-                                </child>
-                                <child>
-                                  <object class="AdwActionRow">
-                                    <property name="activatable">True</property>
-                                    <property name="use_underline">True</property>
-                                    <property name="title" translatable="yes">Language</property>
-                                    <property name="activatable-widget">language_entry</property>
-                                    <child>
-                                      <object class="GtkEntry" id="language_entry">
-                                        <property name="valign">center</property>
+                                        <signal name="notify::text" handler="validate_input" swapped="true"/>
                                       </object>
                                     </child>
                                   </object>
@@ -205,6 +166,7 @@
                                 <property name="halign">center</property>
                                 <property name="margin_top">12</property>
                                 <property name="sensitive">False</property>
+                                <signal name="clicked" handler="create_station" swapped="true"/>
                                 <style>
                                   <class name="pill"/>
                                   <class name="suggested-action"/>
