create_station_dialog: Misc i18n fixes

--- a/data/gtk/create_station_dialog.ui
+++ b/data/gtk/create_station_dialog.ui
@@ -77,7 +77,7 @@
                   <object class="GtkHeaderBar">
                     <property name="title-widget">
                       <object class="AdwWindowTitle">
-                        <property name="title" translatable="yes">Create local private station</property>
+                        <property name="title" translatable="yes">Create local station</property>
                       </object>
                     </property>
                     <child>
