--- a/data/gtk/create_station_dialog.ui
+++ b/data/gtk/create_station_dialog.ui
@@ -29,7 +29,7 @@
                 <child>
                   <object class="AdwStatusPage">
                     <property name="icon-name">list-add-symbolic</property>
-                    <property name="title" translatable="yes">Create new station</property>
+                    <property name="title" translatable="yes">Create New Station</property>
                     <property name="description" translatable="yes">You can decide if you want the new station to be visible for all users worldwide or if you want to create a local station.</property>
                     <property name="height-request">400</property>
                     <property name="child">
@@ -40,7 +40,7 @@
                         <property name="spacing">12</property>
                         <child>
                           <object class="GtkButton" id="create_online_button">
-                            <property name="label" translatable="yes">Create _public station</property>
+                            <property name="label" translatable="yes">Create _Public Station</property>
                             <property name="use_underline">True</property>
                             <signal name="clicked" handler="create_public_station" swapped="true"/>
                             <style>
@@ -51,7 +51,7 @@
                         </child>
                         <child>
                           <object class="GtkButton" id="create_local_button">
-                            <property name="label" translatable="yes">Create _local station</property>
+                            <property name="label" translatable="yes">Create _Local Station</property>
                             <property name="use_underline">True</property>
                             <signal name="clicked" handler="create_local_station" swapped="true"/>
                             <style>
@@ -77,7 +77,7 @@
                   <object class="GtkHeaderBar">
                     <property name="title-widget">
                       <object class="AdwWindowTitle">
-                        <property name="title" translatable="yes">Create local station</property>
+                        <property name="title" translatable="yes">Create Local Station</property>
                       </object>
                     </property>
                     <child>
@@ -162,7 +162,7 @@
                             </child>
                             <child>
                               <object class="GtkButton" id="create_button">
-                                <property name="label" translatable="yes">Create station</property>
+                                <property name="label" translatable="yes">Create Station</property>
                                 <property name="halign">center</property>
                                 <property name="margin_top">12</property>
                                 <property name="sensitive">False</property>
