--- a/data/gtk/discover_page.ui
+++ b/data/gtk/discover_page.ui
@@ -25,7 +25,7 @@
                     </child>
                     <child>
                       <object class="GtkLabel">
-                        <property name="label" translatable="yes">Most voted stations</property>
+                        <property name="label" translatable="yes">Most Voted Stations</property>
                         <property name="wrap">True</property>
                         <property name="xalign">0</property>
                         <property name="yalign">0</property>
@@ -55,7 +55,7 @@
                     <child>
                       <object class="GtkLabel">
                         <property name="margin_top">12</property>
-                        <property name="label" translatable="yes">Other users are listening to…</property>
+                        <property name="label" translatable="yes">Other Users Are Listening To…</property>
                         <property name="wrap">True</property>
                         <property name="xalign">0</property>
                         <property name="yalign">0</property>
