--- a/data/gtk/library_page.ui
+++ b/data/gtk/library_page.ui
@@ -57,7 +57,7 @@
                     </child>
                     <child>
                       <object class="GtkLabel">
-                        <property name="label" translatable="yes">Receiving station data…</property>
+                        <property name="label" translatable="yes">Receiving Station Data…</property>
                         <style>
                           <class name="title-4"/>
                         </style>
@@ -84,7 +84,7 @@
                       <object class="GtkButton" id="discover_button">
                         <property name="action_name">win.show-discover</property>
                         <property name="halign">center</property>
-                        <property name="label" translatable="yes">_Discover new stations</property>
+                        <property name="label" translatable="yes">_Discover New Stations</property>
                         <property name="use_underline">True</property>
                         <style>
                           <class name="suggested-action"/>
