--- a/data/gtk/streaming_dialog.ui
+++ b/data/gtk/streaming_dialog.ui
@@ -40,7 +40,7 @@
     <property name="destroy_with_parent">True</property>
     <property name="deletable">False</property>
     <property name="modal">True</property>
-    <property name="title" translatable="yes">Stream to a device</property>
+    <property name="title" translatable="yes">Stream to a Device</property>
     <child type="titlebar">
       <object class="GtkHeaderBar">
         <child>
@@ -173,7 +173,7 @@
                                       <object class="GtkLabel">
                                         <property name="margin_top">6</property>
                                         <property name="margin_bottom">6</property>
-                                        <property name="label" translatable="yes">Searching for devices…</property>
+                                        <property name="label" translatable="yes">Searching for Devices…</property>
                                         <style>
                                           <class name="dim-label"/>
                                         </style>
@@ -204,7 +204,7 @@
                             </child>
                             <child>
                               <object class="GtkLabel">
-                                <property name="label" translatable="yes">Searching for devices…</property>
+                                <property name="label" translatable="yes">Searching for Devices…</property>
                                 <property name="wrap">True</property>
                                 <attributes>
                                   <attribute name="weight" value="bold"/>
