--- a/data/gtk/create_station_dialog.ui
+++ b/data/gtk/create_station_dialog.ui
@@ -191,7 +191,7 @@
         <child>
           <object class="GtkShortcut">
             <property name="trigger">Escape</property>
-            <property name="action">action(dialog.close)</property>
+            <property name="action">action(window.close)</property>
           </object>
         </child>
       </object>
