--- a/data/gtk/station_dialog.ui
+++ b/data/gtk/station_dialog.ui
@@ -137,7 +137,7 @@
                           </object>
                         </child>
                         <style>
-                          <class name="local-notice"/>
+                          <class name="notice-row"/>
                         </style>
                       </object>
                     </child>
@@ -336,7 +336,7 @@
         <child>
           <object class="GtkShortcut">
             <property name="trigger">Escape</property>
-            <property name="action">action(dialog.close)</property>
+            <property name="action">action(window.close)</property>
           </object>
         </child>
       </object>
